Made the root entry in breadcrumbs appear without version number. Added styling to avoid overlap on different kinds of pages. Added partintro text (to be expanded on later) to get the layout right with breadcrumbs.

--- a/manual/src/main/resources/css/neo.css
+++ b/manual/src/main/resources/css/neo.css
@@ -402,12 +402,16 @@ div.slide p, div.slide li
 /* Breadcrumbs */
 
 .breadcrumbs {
-    border-bottom: 1px solid #DDDDDD;
-    color: #333333;
-    font-size: 15px;
-    padding: 5px 0;
-    position: absolute;
-    top: 114px;
-    width:100%;
+  border-bottom: 1px solid #DDDDDD;
+  color: #333333;
+  font-size: 15px;
+  padding: 5px 0;
+  position: absolute;
+  top: 114px;
+  width:100%;
+}
+
+.partintro, .refsynopsisdiv {
+  padding-top: 1.5em;
 }
 
